# sbndqm

./: CMakeLists.txt  README.md
sbndqm/: CMakeLists.txt
sbndqm/AliveMonitor/: alive_monitor.py  requirements.txt
sbndqm/Archiver/: Archiver.py  ArchiverConfig.json  CreateConfig.py  CreateMonitorMap.py  DumpPostgres.py  Fill.py  NewArchiver.py  README  RestartArchiver.sh  RunTimeAverages.py  TestRun.sh  average_stream.py  fill_stream.py  inspect_channel.py  query_channels.py
sbndqm/Archiver/ddl/: channelMonitor.sql  createMonitor.sh  grants.sql  lastValue.sql  monitorMap.sql  refValue.sql
sbndqm/DAQConsumer/: daq_consumer.py  dispatcher_consumer.py  file_consumer.py  process.py
sbndqm/DatabaseStorage/: Binary.cc  Binary.h  CMakeLists.txt  Connect.h  Histogram.cc  Histogram.h  Image.cc  Image.h  Waveform.cc  Waveform.h
sbndqm/DatabaseTools/: README  group_config.py  hdict.py  memory_usage.py  monitor_stream.py  requirements.txt  util.py  view_png.py  view_waveform.py  view_waveform_binary.py
sbndqm/Decode/: CMakeLists.txt
sbndqm/Decode/CRT/: #CRTTrigger.h#  CMakeLists.txt  CRT.fcl  CRTOnlineMonitor_module.cc  CRTRawDecoder.fcl  CRTRawDecoder_module.cc  CRTRawDecoder_orig.fcl  FlatDirectory.cpp  OnlinePlotter.cpp  drawHisto.C  runCRTOnlineMonitor.fcl  runCRTOnlineMonitor_orig.fcl  runCRTRawDecoder.fcl
sbndqm/Decode/CRT/DATA/: CRTTrigger.h  classes.h
sbndqm/Decode/Mode/: CMakeLists.txt  Mode.cc  Mode.hh
sbndqm/Decode/PMT/: CMakeLists.txt  DaqDecoderIcarusPMT.h  DaqDecoderIcarusPMT_module.cc  PMTDigitizerInfo.hh  PMTWaveform.cc  PMTWaveform.hh  classes.h  classes_def.xml
sbndqm/Decode/PMT/ICARUS/: CMakeLists.txt  DaqDecoderIcarusPMT_module.cc
sbndqm/Decode/PMT/PMTDecodeData/: CMakeLists.txt  PMTDigitizerInfo.cc  PMTDigitizerInfo.hh  classes.h  classes_def.xml  linkdef.h
sbndqm/Decode/PMT/SBND/: CMakeLists.txt  DaqDecoderSBNDPMT_module.cc
sbndqm/Decode/TPC/: CMakeLists.txt  NTBHeaderData.hh  classes.h  classes_def.xml  linkdef.h
sbndqm/Decode/TPC/ICARUS/: CMakeLists.txt  ICARUSTPCDecoder.h  (+1 more)
sbndqm/Decode/Trigger/: CMakeLists.txt  DaqDecoderIcarusTrigger_module.cc
sbndqm/Decode/fcl/: icarus_online_decoder_defs.fcl
sbndqm/MetricConfig/: CMakeLists.txt  ConfigureRedis.cc  ConfigureRedis.hh
sbndqm/MetricManagerShim/: MetricManager.hh
sbndqm/TransferInput/: ArtdaqInput.hh  CMakeLists.txt  Commandable.cc  Commandable.hh  Commandable.sm  CommanderInterface.cc  CommanderInterface.hh  Globals.cc  Globals.hh  InputUtilities.hh  MakeCommanderPlugin.cc  MakeCommanderPlugin.hh  MakeTransferPlugin.cc  MakeTransferPlugin.hh  NetMonHeader.hh  PortManager.cc  PortManager.hh  ShmemTransfer.hh  Shmem_transfer.cc  TCPConnect.cc  TCPConnect.hh  TransferInput_source.cc  TransferInterface.cc  TransferInterface.hh  TransferWrapper.cc  TransferWrapper.hh  xmlrpc_commander.cc  xmlrpc_commander.hh
sbndqm/dqmAnalysis/: CMakeLists.txt
sbndqm/dqmAnalysis/CRT/: BernCRTAna_module.cc  BernCRTZMQAna_module.cc  BernCRTdqm_module.cc  CMakeLists.txt  crt_FEBmetrics.fcl  crt_FEBmetrics_offline.fcl  crt_FEBmetrics_online.fcl  online_crt_analysis.fcl
sbndqm/dqmAnalysis/ChannelMapping/: CMakeLists.txt  ChannelMapPostGres_tool.cc  ChannelMapSQLite_tool.cc  ICARUSChannelMapProvider.cxx  ICARUSChannelMapProvider.h  ICARUSChannelMap_service.cc  PMTChannelMapDumper.cxx  README.md
sbndqm/dqmAnalysis/FragmentAna/: CMakeLists.txt  FragmentDQMAna_module.cc  fragmentDQMAna_testing.fcl
sbndqm/dqmAnalysis/Meta/: CMakeLists.txt  ReportMetadata_module.cc
sbndqm/dqmAnalysis/Nevis/: CMakeLists.txt  NevisProductionTest_module.cc  nevis_production_ana.fcl
sbndqm/dqmAnalysis/PMT/: BeamTimingStreams_module.cc  CAENV1730Dump_module.cc  CAENV1730Stream_module.cc  CAENV1730Streams.hh  CAENV1730Streams_module.cc  CAENV1730WaveformAnalysis.hh  CAENV1730WaveformAnalysis_module.cc  CMakeLists.txt  ChannelData.hh  DaqDecodePMT.fcl  DaqDecoderIcarusPMT_module.cc  PMTDigitizerInfo.hh  PMTWaveform.hh  PMTWaveformCreator_module.cc  classes.h  linkdef.h  pmt_online_monitor.fcl
sbndqm/dqmAnalysis/SPECTDC/: SPECTDCStreams_module.cc
sbndqm/dqmAnalysis/SunsetAna/: CMakeLists.txt  PMTAnalyzer_module.cc  PMTSunsetAnalyzer_module.cc  TPCAnalyzer_module.cc  TPCSunsetAnalyzer_module.cc  run_pmtana.fcl  run_tpcana.fcl
sbndqm/dqmAnalysis/TPC/: Analysis.cc  Analysis.hh  AnalysisSBND.cc  AnalysisSBND.hh  CMakeLists.txt  ChannelData.cc  ChannelData.hh  ChannelDataSBND.cc  ChannelDataSBND.hh  Connection.cc  FFT.cc  FFT.hh  FragmentErrAna_module.cc  HeaderData.hh  ICARUSPurityDQM_module.cc  Mode.cc  Mode.hh  Noise.cc  Noise.hh  OfflineAnalysis_module.cc  OfflineEvd_module.cc  OnlineAnalysis_module.cc  OnlineAnalysis_module_stash.cc  OnlineEvd_module.cc  PeakFinder.cc  PeakFinder.hh  README.md  TPCPurityDQMSender_module.cc  TPCWaveformAndFftCreator_module.cc  TPCWaveformAndFftRedis_module.cc  TPCWaveformCreator_module.cc  VSTChannelMap.hh  Waveform-FFTCreator_module.cc  classes.h  classes_def.xml  decoder_and_analysisIcarus.fcl  linkdef.h
sbndqm/dqmAnalysis/Timing/: CMakeLists.txt  SPECTDCStreamsNoRedis_module.cc  SPECTDCStreams_module.cc
sbndqm/dqmAnalysis/Trigger/: BeamBits.h  CMakeLists.txt  TriggerMonitor_module.cc  TriggerStreams_module.cc
sbndqm/dqmAnalysis/Utilities/: CMakeLists.txt  HistogramMetrics.cxx  HistogramMetrics.h  HistogramMetricsManager.cxx  HistogramMetricsManager.h
sbndqm/dqmAnalysis/electronLifeTime/: CMakeLists.txt  CRTChannelMapAlg.cxx  CRTChannelMapAlg.h  CRTData.cxx  CRTData.hh  CRTGeoObjectSorter.cxx  CRTGeoObjectSorter.h  CRTGeometryHelper.h  CRTGeometryHelper_service.cc  CRTHit.cc  CRTHit.hh  CRTHitRecoAlg.cc  CRTHitRecoAlg.h  CRTTrack.cc  CRTTrack.hh  HitDumper_module.cc  SnapshotFilter_module.cc  TrigFilter_module.cc  classes.h  classes_def.xml
sbndqm/dqmAnalysis/example/: CMakeLists.txt  ExampleAlarm_module.cc  ExampleDatabaseStorage_module.cc  ExampleTimeStream_module.cc  run_example.fcl  run_example_alarms.fcl  run_example_dab.fcl  run_example_daq_interface.fcl  run_example_daq_interface_dab.fcl  run_example_database_storage.fcl  run_example_sbnd.fcl
tools/: CMakeLists.txt  (+2 more)
(+175 files in other folders)
